--- a/index.html
+++ b/index.html
@@ -58,12 +58,14 @@
     <header class="masthead">
       <div class="container">
         <div class="intro-text">
-          <div class="intro-lead-in">Welcome To My Website</div>
+          <div class="intro-lead-in">Welcome To My GitHub Website</div>
           <div class="intro-heading text-uppercase">Check out my work!</div>
           <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Tell Me More</a>
         </div>
       </div>
     </header>
+    
+   
 
        <!-- About -->
     <section id="about">
