--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
                   <i class="fa fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/MaxRig/icon.jpg" alt="">
+              <img class="img-fluid" src="https://github.com/mballent/tabrisportfolio/blob/master/Full%20Screen%20of%20Finished%20Code.png?raw=true" alt="">
             </a>
             <div class="portfolio-caption">
               <h4>MaxRig Animation</h4>
@@ -328,7 +328,7 @@
     
              <!--     10th Portfolio     -->
             <div class="col-md-4 col-sm-6 portfolio-item">
-            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal9">
+            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal10">
               <div class="portfolio-hover">
                 <div class="portfolio-hover-content">
                   <i class="fa fa-plus fa-3x"></i>
@@ -882,6 +882,45 @@
                     <li>Date: 2016</li>
                     <li>Client: Assignment</li>
                     <li>Category: 3d Animation</li>
+                  </ul>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/K3wdO3Jc21c" frameborder="0" allowfullscreen></iframe>
+                  <button class="btn btn-primary" data-dismiss="modal" type="button">
+                    <i class="fa fa-times"></i>
+                    Close Project</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+        <!-- Modal 10 -->
+    <div class="portfolio-modal modal fade" id="portfolioModal10" tabindex="-1" role="dialog" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="close-modal" data-dismiss="modal">
+            <div class="lr">
+              <div class="rl"></div>
+            </div>
+          </div>
+          <div class="container">
+            <div class="row">
+              <div class="col-lg-8 mx-auto">
+                <div class="modal-body">
+                  <!-- Project Details Go Here -->
+                  <h2 class="text-uppercase">Tabris.js Tutorial</h2>
+                  <p class="item-intro text-muted">Javascript Coding</p>
+                  <img class="img-fluid d-block mx-auto" src="https://github.com/mballent/tabrisportfolio/blob/master/screengrab1.png?raw=true" alt="">
+                  <img class="img-fluid d-block mx-auto" src="https://github.com/mballent/tabrisportfolio/blob/master/screengrab2.png?raw=true" alt="">
+                  <img class="img-fluid d-block mx-auto" src="https://github.com/mballent/tabrisportfolio/blob/master/screengrab3.png?raw=true" alt="">
+                  <img class="img-fluid d-block mx-auto" src="img/portfolio/MaxRig/icon.jpg" alt="">
+                  <p>This Assignment was to make a tutorial on Github about Tabris.js. Full tutorial can be found at https://github.com/mballent/tabrisportfolio.</p>
+                  <ul class="list-inline">
+                    <li>Date: 2016</li>
+                    <li>Client: Assignment</li>
+                    <li>Category: Javascript Coding</li>
                   </ul>
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/K3wdO3Jc21c" frameborder="0" allowfullscreen></iframe>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
