--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
                   <i class="fa fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/MaxRig/icon.jpg" alt="">
+              <img class="img-fluid" src="https://github.com/mballent/tabrisportfolio/blob/master/ColorInitial.png" alt="">
             </a>
             <div class="portfolio-caption">
               <h4>Tabris.js App Tutorial</h4>
