--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
                   <i class="fa fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="https://github.com/mballent/tabrisportfolio/blob/master/Full%20Screen%20of%20Finished%20Code.png?raw=true" alt="">
+              <img class="img-fluid" src="img/portfolio/MaxRig/icon.png" alt="">
             </a>
             <div class="portfolio-caption">
               <h4>MaxRig Animation</h4>
