--- a/index.html
+++ b/index.html
@@ -345,6 +345,63 @@
       </div>
     </section>
 
+             <!--     11th Portfolio     -->
+            <div class="col-md-4 col-sm-6 portfolio-item">
+            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal11">
+              <div class="portfolio-hover">
+                <div class="portfolio-hover-content">
+                  <i class="fa fa-plus fa-3x"></i>
+                </div>
+              </div>
+              <img class="img-fluid" src="https://github.com/mballent/tabrisportfolio/blob/master/ColorInitial.png" alt="">
+            </a>
+            <div class="portfolio-caption">
+              <h4>3d Model of Snowman</h4>
+              <p class="text-muted">3d Design</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+             <!--     12th Portfolio     -->
+            <div class="col-md-4 col-sm-6 portfolio-item">
+            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal12">
+              <div class="portfolio-hover">
+                <div class="portfolio-hover-content">
+                  <i class="fa fa-plus fa-3x"></i>
+                </div>
+              </div>
+              <img class="img-fluid" src="https://github.com/mballent/tabrisportfolio/blob/master/ColorInitial.png" alt="">
+            </a>
+            <div class="portfolio-caption">
+              <h4>3d Model of Snowman</h4>
+              <p class="text-muted">3d Design</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+             <!--     13th Portfolio     -->
+            <div class="col-md-4 col-sm-6 portfolio-item">
+            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal13">
+              <div class="portfolio-hover">
+                <div class="portfolio-hover-content">
+                  <i class="fa fa-plus fa-3x"></i>
+                </div>
+              </div>
+              <img class="img-fluid" src="https://github.com/mballent/tabrisportfolio/blob/master/ColorInitial.png" alt="">
+            </a>
+            <div class="portfolio-caption">
+              <h4>3d Model of Snowman</h4>
+              <p class="text-muted">3d Design</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
  
 <!--
      Team 
@@ -898,6 +955,112 @@
 
         <!-- Modal 10 -->
     <div class="portfolio-modal modal fade" id="portfolioModal10" tabindex="-1" role="dialog" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="close-modal" data-dismiss="modal">
+            <div class="lr">
+              <div class="rl"></div>
+            </div>
+          </div>
+          <div class="container">
+            <div class="row">
+              <div class="col-lg-8 mx-auto">
+                <div class="modal-body">
+                  <!-- Project Details Go Here -->
+                  <h2 class="text-uppercase">Tabris.js Tutorial</h2>
+                  <p class="item-intro text-muted">Javascript Coding</p>
+                  <img class="img-fluid d-block mx-auto" src="https://github.com/mballent/tabrisportfolio/blob/master/screengrab1.png?raw=true" alt="">
+                  <img class="img-fluid d-block mx-auto" src="https://github.com/mballent/tabrisportfolio/blob/master/screengrab2.png?raw=true" alt="">
+                  <img class="img-fluid d-block mx-auto" src="https://github.com/mballent/tabrisportfolio/blob/master/screengrab3.png?raw=true" alt="">
+                  <p>This Assignment was to make a tutorial on Github about Tabris.js. Full tutorial can be found at https://github.com/mballent/tabrisportfolio.</p>
+                  <ul class="list-inline">
+                    <li>Date: 2016</li>
+                    <li>Client: Assignment</li>
+                    <li>Category: Javascript Coding</li>
+                  </ul>
+                  <button class="btn btn-primary" data-dismiss="modal" type="button">
+                    <i class="fa fa-times"></i>
+                    Close Project</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+        <!-- Modal 11 -->
+    <div class="portfolio-modal modal fade" id="portfolioModal11" tabindex="-1" role="dialog" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="close-modal" data-dismiss="modal">
+            <div class="lr">
+              <div class="rl"></div>
+            </div>
+          </div>
+          <div class="container">
+            <div class="row">
+              <div class="col-lg-8 mx-auto">
+                <div class="modal-body">
+                  <!-- Project Details Go Here -->
+                  <h2 class="text-uppercase">Tabris.js Tutorial</h2>
+                  <p class="item-intro text-muted">Javascript Coding</p>
+                  <div class="sketchfab-embed-wrapper"><iframe width="640" height="480" src="https://sketchfab.com/models/c200b7e04fbf4384ab7b185752bf0279/embed" frameborder="0" allowvr allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe> <p style="font-size: 13px; font-weight: normal; margin: 5px; color: #4A4A4A;"> <a href="https://sketchfab.com/models/c200b7e04fbf4384ab7b185752bf0279?utm_medium=embed&utm_source=website&utm_campain=share-popup" target="_blank" style="font-weight: bold; color: #1CAAD9;">Snowman</a> by <a href="https://sketchfab.com/mballentine16?utm_medium=embed&utm_source=website&utm_campain=share-popup" target="_blank" style="font-weight: bold; color: #1CAAD9;">mballentine16</a> on <a href="https://sketchfab.com?utm_medium=embed&utm_source=website&utm_campain=share-popup" target="_blank" style="font-weight: bold; color: #1CAAD9;">Sketchfab</a> </p> </div>
+                  <p>This Assignment was to make a snowman render in 3ds Max</p>
+                  <ul class="list-inline">
+                    <li>Date: 2015</li>
+                    <li>Client: Assignment</li>
+                    <li>Category: 3ds Max Render</li>
+                  </ul>
+                  <button class="btn btn-primary" data-dismiss="modal" type="button">
+                    <i class="fa fa-times"></i>
+                    Close Project</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+        <!-- Modal 12 -->
+    <div class="portfolio-modal modal fade" id="portfolioModal12" tabindex="-1" role="dialog" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="close-modal" data-dismiss="modal">
+            <div class="lr">
+              <div class="rl"></div>
+            </div>
+          </div>
+          <div class="container">
+            <div class="row">
+              <div class="col-lg-8 mx-auto">
+                <div class="modal-body">
+                  <!-- Project Details Go Here -->
+                  <h2 class="text-uppercase">Tabris.js Tutorial</h2>
+                  <p class="item-intro text-muted">Javascript Coding</p>
+                  <img class="img-fluid d-block mx-auto" src="https://github.com/mballent/tabrisportfolio/blob/master/screengrab1.png?raw=true" alt="">
+                  <img class="img-fluid d-block mx-auto" src="https://github.com/mballent/tabrisportfolio/blob/master/screengrab2.png?raw=true" alt="">
+                  <img class="img-fluid d-block mx-auto" src="https://github.com/mballent/tabrisportfolio/blob/master/screengrab3.png?raw=true" alt="">
+                  <p>This Assignment was to make a tutorial on Github about Tabris.js. Full tutorial can be found at https://github.com/mballent/tabrisportfolio.</p>
+                  <ul class="list-inline">
+                    <li>Date: 2016</li>
+                    <li>Client: Assignment</li>
+                    <li>Category: Javascript Coding</li>
+                  </ul>
+                  <button class="btn btn-primary" data-dismiss="modal" type="button">
+                    <i class="fa fa-times"></i>
+                    Close Project</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+        <!-- Modal 13 -->
+    <div class="portfolio-modal modal fade" id="portfolioModal13" tabindex="-1" role="dialog" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="close-modal" data-dismiss="modal">
