--- a/index.html
+++ b/index.html
@@ -372,35 +372,18 @@
                   <i class="fa fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="https://github.com/mballent/tabrisportfolio/blob/master/ColorInitial.png" alt="">
+              <img class="img-fluid" src="" alt="">
             </a>
             <div class="portfolio-caption">
-              <h4>3d Model of Snowman</h4>
-              <p class="text-muted">3d Design</p>
+              <h4>LinkedIn</h4>
+              <p class="text-muted">Profile</p>
             </div>
           </div>
         </div>
       </div>
 
 
-             <!--     13th Portfolio     -->
-            <div class="col-md-4 col-sm-6 portfolio-item">
-            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal13">
-              <div class="portfolio-hover">
-                <div class="portfolio-hover-content">
-                  <i class="fa fa-plus fa-3x"></i>
-                </div>
-              </div>
-              <img class="img-fluid" src="https://github.com/mballent/tabrisportfolio/blob/master/ColorInitial.png" alt="">
-            </a>
-            <div class="portfolio-caption">
-              <h4>3d Model of Snowman</h4>
-              <p class="text-muted">3d Design</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
+
 
  
 <!--
@@ -1039,14 +1022,12 @@
                   <!-- Project Details Go Here -->
                   <h2 class="text-uppercase">Tabris.js Tutorial</h2>
                   <p class="item-intro text-muted">Javascript Coding</p>
-                  <img class="img-fluid d-block mx-auto" src="https://github.com/mballent/tabrisportfolio/blob/master/screengrab1.png?raw=true" alt="">
-                  <img class="img-fluid d-block mx-auto" src="https://github.com/mballent/tabrisportfolio/blob/master/screengrab2.png?raw=true" alt="">
-                  <img class="img-fluid d-block mx-auto" src="https://github.com/mballent/tabrisportfolio/blob/master/screengrab3.png?raw=true" alt="">
-                  <p>This Assignment was to make a tutorial on Github about Tabris.js. Full tutorial can be found at https://github.com/mballent/tabrisportfolio.</p>
+                  <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="light" data-vanity="matt-ballentine"><a class="LI-simple-link" href='https://ca.linkedin.com/in/matt-ballentine?trk=profile-badge'>Matt Ballentine</a></div>
+                  <p>Link to my LinkedIn.</p>
                   <ul class="list-inline">
                     <li>Date: 2016</li>
-                    <li>Client: Assignment</li>
-                    <li>Category: Javascript Coding</li>
+                    <li>Client: LinkedIn</li>
+                    <li>Category: Profile</li>
                   </ul>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
@@ -1059,41 +1040,7 @@
       </div>
     </div>
 
-        <!-- Modal 13 -->
-    <div class="portfolio-modal modal fade" id="portfolioModal13" tabindex="-1" role="dialog" aria-hidden="true">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="close-modal" data-dismiss="modal">
-            <div class="lr">
-              <div class="rl"></div>
-            </div>
-          </div>
-          <div class="container">
-            <div class="row">
-              <div class="col-lg-8 mx-auto">
-                <div class="modal-body">
-                  <!-- Project Details Go Here -->
-                  <h2 class="text-uppercase">Tabris.js Tutorial</h2>
-                  <p class="item-intro text-muted">Javascript Coding</p>
-                  <img class="img-fluid d-block mx-auto" src="https://github.com/mballent/tabrisportfolio/blob/master/screengrab1.png?raw=true" alt="">
-                  <img class="img-fluid d-block mx-auto" src="https://github.com/mballent/tabrisportfolio/blob/master/screengrab2.png?raw=true" alt="">
-                  <img class="img-fluid d-block mx-auto" src="https://github.com/mballent/tabrisportfolio/blob/master/screengrab3.png?raw=true" alt="">
-                  <p>This Assignment was to make a tutorial on Github about Tabris.js. Full tutorial can be found at https://github.com/mballent/tabrisportfolio.</p>
-                  <ul class="list-inline">
-                    <li>Date: 2016</li>
-                    <li>Client: Assignment</li>
-                    <li>Category: Javascript Coding</li>
-                  </ul>
-                  <button class="btn btn-primary" data-dismiss="modal" type="button">
-                    <i class="fa fa-times"></i>
-                    Close Project</button>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+
 
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
